<resources>
    <string name="app_name">Currency Converter</string>
    <string name="result">Result</string>
    <string name="convert">Convert</string>
    <string name="enter">Enter</string>
    <string name="inputvalue">From</string>
    <string name="outputvalue">To</string>
    <string name="amount">Amount</string>
    <string name="update">Last Update: </string>
    <string name="fullname">Full Name</string>
    <string name="shortname">Short Name</string>
    <string name="rate">Rate</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_addCustomCurrency">Add Currency</string>
    <string name="remove">Remove</string>
    <string name="addtopreferred">Add to favorited</string>
</resources>
