<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="#3E497D"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/etQuantita"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"

        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#a17f5138"
        android:textColorHint="#a17f5138"
        android:textColorLink="#a17f5138"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/tvRisultato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recycler_currency"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/tvRisultato"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:contextClickable="false"

        android:gravity="center"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#a17f5138"
        android:textColorHighlight="#a17f5138"
        android:textColorHint="#a17f5138"
        android:textColorLink="#a17f5138"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649" />

    <Button
        android:id="@+id/invio"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#38f1890a"
        android:text="@string/convert"
        android:textColor="#a17f5138"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvRisultato"
        app:layout_constraintStart_toStartOf="@+id/tvRisultato" />

    <Button
        android:id="@+id/fromButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#38f1890a"
        android:text="@string/inputvalue"
        android:textColor="#a17f5138"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/toButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#38f1890a"
        android:text="@string/outputvalue"
        android:textColor="#a17f5138"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/from"
        android:layout_width="68dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etQuantita"
        app:layout_constraintEnd_toStartOf="@+id/etQuantita"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etQuantita"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/to"
        android:layout_width="68dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColorLink="#78424242"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvRisultato"
        app:layout_constraintEnd_toStartOf="@+id/tvRisultato"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRisultato"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lastUpdate"
        android:layout_width="167dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/update"
        android:textAlignment="center"
        android:textColor="#a17f5138"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32263514" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_cryptourrency"
        android:layout_width="181dp"
        android:layout_height="255dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/invio"
        app:layout_constraintEnd_toEndOf="@+id/toButton"
        app:layout_constraintStart_toStartOf="@+id/fromButton"
        app:layout_constraintTop_toBottomOf="@+id/lastUpdate" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_currency"
        android:layout_width="181dp"
        android:layout_height="255dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/invio"
        app:layout_constraintEnd_toEndOf="@+id/toButton"
        app:layout_constraintStart_toStartOf="@+id/fromButton"
        app:layout_constraintTop_toBottomOf="@+id/lastUpdate">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>